--- a/手写/手写题库/js继承/原型链继承.html
+++ b/手写/手写题库/js继承/原型链继承.html
@@ -1,41 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>原型链继承</title>
 </head>
 <body>
 <script>
+    function Father () {
+        this.say = 'father'
+        this.colors  = ['red']
+    }
+    Father.prototype.getFatherValue = function () {
+        return this.say
+    }
+
+    // 创建 构造函数 Child,
+    function Child () {
+        this.name = 'children'
+    }
+    // 创建Father的实例，并将该实例赋值给Child.prototype
+    Child.prototype = new Father()
+    const c1 = new Child()
+    console.log(c1.getFatherValue()) // father
+
     /*
-    * 重点：让新实例的原型等于父类的实例。
-　　　　特点：1、实例可继承的属性有：实例的构造函数的属性，父类构造函数属性，父类原型的属性。（新实例不会继承父类实例的属性！）
-　　　　缺点：1、新实例无法向父类构造函数传参。
-　　　　　　　2、继承单一。
-　　　　　　　3、所有新实例都会共享父类实例的属性。（原型上的属性是共享的，一个实例修改了原型属性，另一个实例的原型属性也会被修改！）
-    *
+    * 缺点：
+    * 1 私有原型属性会被实例共享
+    * 2 在创建子类型的实例时，不能向父类型的构造函数传递参数
     * */
-    // 原型链继承
-    function Person(name) {
-      this.name = name
-      this.sum = function () {
-        console.log(this.name)
-      }
-    }
-    Person.prototype.age = 10
-
-    function Child(name) {
-      // this.name = '张三'
-      this.name = name
-    }
-    Child.prototype = new Person()
-    let c1 = new Child('李四')
-    console.log(c1.age) //  10
-    console.log(c1.sum()) //  李四
-    console.log(c1 instanceof Person) // true
-
+    c1.colors.push('yellow')
+    console.log('c1', c1.colors)
+    const c2 = new Child()
+    console.log('c2', c2.colors)
+    // Father的私有原型属性colors被实例共享，修改了也会一同被修改。
 </script>
 </body>
 </html>
