--- a/手写/手写题库/js继承/1原型链继承.html
+++ b/手写/手写题库/js继承/1原型链继承.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script>
+    // 重写原型对象，代之以一个新类型的实例
     function Father () {
         this.say = 'father'
         this.colors  = ['red']
