--- a/手写/手写题库/js继承/2构造函数继承.html
+++ b/手写/手写题库/js继承/2构造函数继承.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script>
+    // 使用父类的构造函数来增强子类实例，等同于复制父类的实例给子类（不使用原型）
     function Parent() {
         this.colors = ['red']
     }
